// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColors() should return correct css for theme: dark and hasInvertedTheme: false 1`] = `
{
  "backgroundColor": "#212225",
  "backgroundHoverColor": "#3E4045",
  "focusColor": "#0A0AFF",
  "primaryColor": "#FBFCFF",
}
`;

exports[`getColors() should return correct css for theme: dark and hasInvertedTheme: true 1`] = `
{
  "backgroundColor": "#212225",
  "backgroundHoverColor": "#3E4045",
  "focusColor": "#0A0AFF",
  "primaryColor": "#010205",
}
`;

exports[`getColors() should return correct css for theme: light and hasInvertedTheme: false 1`] = `
{
  "backgroundColor": "#EEEFF2",
  "backgroundHoverColor": "#CBCED7",
  "focusColor": "#0A0AFF",
  "primaryColor": "#010205",
}
`;

exports[`getColors() should return correct css for theme: light and hasInvertedTheme: true 1`] = `
{
  "backgroundColor": "#EEEFF2",
  "backgroundHoverColor": "#CBCED7",
  "focusColor": "#0A0AFF",
  "primaryColor": "#FBFCFF",
}
`;

exports[`getComponentCss() should return correct css for color: background-default, isFocusable: false and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #0E0E12;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, isFocusable: false and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #FFF;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #0E0E12;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #292934;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #FFF;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #E0E0E0;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #212225;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #3E4045;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #EEEFF2;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #CBCED7;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: neutral-contrast-high, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #FBFCFF;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #CECFD1;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: neutral-contrast-high, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #010205;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #535457;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #290A0A;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #331F1F;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #FCE8E9;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #EED7D9;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-information, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #001A33;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #0F2943;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-information, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #E8EEFD;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #D6DEF0;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-neutral, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #001A33;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #0F2943;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-neutral, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #E8EEFD;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #D6DEF0;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #003320;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #0F432F;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #EBFAF0;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #DDEAE1;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #2B2208;
  color: #FBFCFF;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #362F1C;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  padding: 5px 9px;
  border-radius: 4px;
  background: #FFF9E6;
  color: #010205;
  font: normal normal 400 .875rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid transparent !important;
  border-radius: 8px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  border-color: #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span:hover {
    cursor: pointer;
    background: #F5ECD2;
  }
}

.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;
